formatted with jalopy
git-svn-id: http://svn.codehaus.org/geoserver/trunk@5911 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: d8b2ba17b3fd4e0c66091b8cc2193711a2be412d [formerly ad58c79547e62f3eca001b5fd6734e1075d3b250]
Former-commit-id: 9a508d2646c53e501e779d98e9f9ea4cadfb12f7